--- a/index.css
+++ b/index.css
@@ -60,10 +60,43 @@ h1{
     margin-bottom: 50px;
 }
 
-.about-bg{ 
+.about-banner{ 
     height: 408px;   
     background-image: url(shapes/Frame58.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
   
 } 
+.title-text-recipie{
+    text-align: center;
+    color: black;
+    margin-bottom: 30px;
+}
+
+.recipie-box{
+color: black;
+border-radius: 15px;
+height: 450px;
+box-shadow:5px 5px 5px 5px gray;
+margin-left: 75px;
+border: 1px white;
+
+}
+
+.width-for-recipies{
+    width: 25%;
+}
+
+.recipie-imgs-size{
+    width: 300px;
+    height: 175px;
+    border-radius: 15px;
+    margin-top: 15px;
+    margin-left: 18px;
+    
+}
+
+.recipie-text{
+    padding: 15px;
+    line-height: 25px;
+}
