--- a/index.css
+++ b/index.css
@@ -44,6 +44,11 @@ h1{
     margin-top: 10%;
    
 }
+
+
+/* About Section Section Style Starts Form Below */
+
+
 #about-me-image img{
     width: 36%;
     margin-left: 15%;
@@ -67,6 +72,9 @@ h1{
     background-size: 100%;
   
 } 
+
+    /* Recipies Section  Style Starts Form Below  */
+
 .title-text-recipie{
     text-align: center;
     color: black;
@@ -79,8 +87,11 @@ border-radius: 15px;
 height: 450px;
 box-shadow:5px 5px 5px 5px gray;
 margin-left: 75px;
-border: 1px white;
 
+}
+
+.recipie-box:hover{
+    background-color:lightblue;
 }
 
 .width-for-recipies{
@@ -100,3 +111,22 @@ border: 1px white;
     padding: 15px;
     line-height: 25px;
 }
+              /* Socia Media Section Style Starts Form Below */
+.social-media{
+    text-align: center;
+    color: black;
+     width: 90%;
+    height: 7%;
+    margin-left:5%;
+    margin-right:5% ;
+    border-radius: 10px;
+    box-shadow:5px 5px 5px 5px gray;
+    background-color: aquamarine;
+   
+}
+.social-media-text{
+    padding-left: 15%;
+}
+
+
+
