--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ h1{
 }
 
 
-/* About Section Section Style Starts Form Below */
+                       /* About Section Section Style Starts Form Below */
 
 
 #about-me-image img{
@@ -73,7 +73,7 @@ h1{
   
 } 
 
-    /* Recipies Section  Style Starts Form Below  */
+                    /* Recipies Section  Style Starts Form Below  */
 
 .title-text-recipie{
     text-align: center;
@@ -111,7 +111,7 @@ margin-left: 75px;
     padding: 15px;
     line-height: 25px;
 }
-              /* Socia Media Section Style Starts Form Below */
+                         /* Socia Media Section Style Starts Form Below */
 .social-media{
     text-align: center;
     color: black;
@@ -128,5 +128,12 @@ margin-left: 75px;
     padding-left: 15%;
 }
 
+                              /* Footer Section Style Starts Form Below */
+.footer-area{
+    text-align: center;
+    background-color: black;
+    width: 100%;
+    height: 100px;
+    padding-top: 10px;
 
-
+}
